# pptrain

./: .gitignore  LICENSE  README.md  pyproject.toml  replication_findings.md
.github/workflows/: ci.yml  publish.yml
configs/: dyck_minimal.yaml  eval_perplexity_smoke.yaml  lime_minimal.yaml  nca_minimal.yaml  procedural_minimal.yaml  simpler_tasks_minimal.yaml  summarization_minimal.yaml
docs/: architecture.md  extending.md  publishing.md  quickstart.md
docs/archive/proxy-study-2026-04-10/: claim_matrix.csv  replication_report.md  replication_results.json  summary.md
docs/internal/: TODO.md  replication.md
examples/: arc_eval.py  arc_loader.py  custom_adapter.py  minimal_nca.py  procedural_smoke.py
replication_snapshots/replication-410m-full/: claim_matrix.csv  progress.txt  replication_report.md  replication_results.json
runs/replication-410m/: replication_results.json
runs/replication-410m-full/: replication_results.json
scripts/: push_replication_progress.sh
src/pptrain/: __init__.py  __main__.py  cli.py  parity_cli.py  reference_nca_repo.py  reference_parity.py  reference_parity_exporters.py  reference_repo.py  transfer.py
src/pptrain/core/: __init__.py  base.py  checkpoints.py  collator.py  config.py  datasets.py  plotting.py  presets.py  registry.py  runner.py  transfer.py
src/pptrain/eval/: __init__.py  base.py  config.py  generation.py  harness.py  plotting.py  runner.py
src/pptrain/integrations/: __init__.py  base.py  hf.py
src/pptrain/mechanisms/: __init__.py  dyck.py  lime.py  procedural.py
src/pptrain/replication/: __init__.py  data.py  diagnostics.py  probes.py  reporting.py  runner.py  specs.py  training.py
tests/: test_arc_agi2.py  test_causal_lm_label_alignment.py  test_checkpoint_resume.py  test_cli.py  test_dyck_mechanism.py  test_dyck_task.py  test_eval_config.py  test_eval_harness.py  test_gsm8k.py  test_integrations.py  test_lime_mechanism.py  test_lime_task.py  test_nca_mechanism.py  test_nca_task.py  test_packaging_contract.py  test_plotting.py  test_procedural_mechanism.py  test_procedural_task.py  test_registry.py  test_replication_aggregation.py  test_replication_data.py  test_replication_diagnostic_metrics.py  test_replication_diagnostics.py  test_replication_probes.py  test_replication_reporting.py  test_replication_resume.py  test_replication_specs.py  test_simpler_tasks_mechanism.py  test_simpler_tasks_task.py  test_summarization_mechanism.py  test_summarization_task.py  test_terminology.py  test_transfer.py
tests/reference_parity/: test_exporter_specs.py  test_fixture_schema.py  test_normalized_fixture.py  test_reference_adapters.py
(+44 files in other folders)
