[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptrain"
version = "0.2.0"
description = "Lean PyTorch tooling for pre-pre-training language models on synthetic upstream tasks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Davide Wiest" }
]
keywords = ["language-models", "pytorch", "synthetic-data", "transformers", "pretraining"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "accelerate>=0.30",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "safetensors>=0.4",
  "torch>=2.2",
  "transformers>=4.40",
]

[project.urls]
Homepage = "https://github.com/Axym-Labs/pptrain"
Repository = "https://github.com/Axym-Labs/pptrain"
Issues = "https://github.com/Axym-Labs/pptrain/issues"
Changelog = "https://github.com/Axym-Labs/pptrain/releases"

[project.optional-dependencies]
eval = [
  "datasets>=2.18",
  "pandas>=2.2",
]
dev = [
  "build>=1.2",
  "datasets>=2.18",
  "pandas>=2.2",
  "pytest>=8.0",
  "ruff>=0.5",
  "twine>=5.1",
]

[project.scripts]
pptrain = "pptrain.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
